using cpx to move secret keys

--- a/api-downwrite/package.json
+++ b/api-downwrite/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "build": "babel src --out-dir dist",
+    "postbuild": "cp private.key dist/private.key",
     "predev": "yarn build",
     "deploy": "now && now alias",
     "start": "node dist/server.js",
